:feat:add header, main

--- a/index.html
+++ b/index.html
@@ -5,14 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel="stylesheet" href="dist/css/style.min.css">
+  
 </head>
 
 <body>
+<header class="header">
+  <div class="header__wrap">
+    <nav class="nav header__nav">
+      <a href="#">Payment</a>
+      <a href="#">About us</a>
+      <a href="#">Contacts</a>
+      <a href="#" class="logo nav__logo">
+        <img src="dist/img/logo.png">
+      </a>
+      <a href="#" class="icon icon3 nav__icon nav__icon3">
+        <img src="dist/img/icon3.svg">
+      </a>
+      <a href="#">Daily 11am - 9pm</a>
+      <a href="#" class="icon nav__icon">
+        <img src="dist/img/icon.svg">
+      </a>
+      <a href="#" class="tel nav__tel"><b>0 800 33 08 98</b></a>
+    </nav>
+    <section class="about header__about">
+      <h1>Food delivery in Kovel</h1>
+      <p>If you decide to relax or have unexpected guests, call us. We make sure that your vacation is comfortable, enjoyable and delicious</p>
+      
+      <img src="dist/img/piza_2.png" class="header__foto">
+      <p class="absolute about__absolute absolute__text">When ordering from <br><span>700 UAH</span>, delivery is free</p>
+      <img src="dist/img/icon-sum.svg" class="absolute about__absolute absolute__icon">
+      <img src="dist/img/Vector4.svg" class="absolute about__absolute absolute__vector">
+    </section>
+  </div>
+  
+</header>
 
-  <div class="block">
-    
+<main>
+  <div class="menu">
+    <h1>Popular dishes</h1>
+    <div class="group menu__group">
+      <a href="#">Pizza</a>
+      <a href="#">Sushi</a>
+      <a href="#">Salad</a>
+      <a href="#">Dessert</a>
+      <a href="#">Drinks</a>
+    </div>
+
+
+
+
   </div>
 
-
+</main>
 </body>
 </html>
