:feat: add menu

--- a/index.html
+++ b/index.html
@@ -1,61 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel="stylesheet" href="dist/css/style.min.css">
-  
+
 </head>
 
 <body>
-<header class="header">
-  <div class="header__wrap">
-    <nav class="nav header__nav">
-      <a href="#">Payment</a>
-      <a href="#">About us</a>
-      <a href="#">Contacts</a>
-      <a href="#" class="logo nav__logo">
-        <img src="dist/img/logo.png">
-      </a>
-      <a href="#" class="icon icon3 nav__icon nav__icon3">
-        <img src="dist/img/icon3.svg">
-      </a>
-      <a href="#">Daily 11am - 9pm</a>
-      <a href="#" class="icon nav__icon">
-        <img src="dist/img/icon.svg">
-      </a>
-      <a href="#" class="tel nav__tel"><b>0 800 33 08 98</b></a>
-    </nav>
-    <section class="about header__about">
-      <h1>Food delivery in Kovel</h1>
-      <p>If you decide to relax or have unexpected guests, call us. We make sure that your vacation is comfortable, enjoyable and delicious</p>
-      
-      <img src="dist/img/piza_2.png" class="header__foto">
-      <p class="absolute about__absolute absolute__text">When ordering from <br><span>700 UAH</span>, delivery is free</p>
-      <img src="dist/img/icon-sum.svg" class="absolute about__absolute absolute__icon">
-      <img src="dist/img/Vector4.svg" class="absolute about__absolute absolute__vector">
-    </section>
-  </div>
-  
-</header>
+  <header class="header">
+    <div class="header__wrap">
+      <nav class="nav header__nav">
+        <a href="#">Payment</a>
+        <a href="#">About us</a>
+        <a href="#">Contacts</a>
+        <a href="#" class="logo nav__logo">
+          <img src="dist/img/logo.png">
+        </a>
+        <a href="#" class="icon icon3 nav__icon nav__icon3">
+          <img src="dist/img/icon3.svg">
+        </a>
+        <a href="#">Daily 11am - 9pm</a>
+        <a href="#" class="icon nav__icon">
+          <img src="dist/img/icon.svg">
+        </a>
+        <a href="#" class="tel nav__tel"><b>0 800 33 08 98</b></a>
+      </nav>
+      <section class="about header__about">
+        <h1>Food delivery in Kovel</h1>
+        <p>If you decide to relax or have unexpected guests, call us. We make sure that your vacation is comfortable,
+          enjoyable and delicious</p>
 
-<main>
-  <div class="menu">
-    <h1>Popular dishes</h1>
-    <div class="group menu__group">
-      <a href="#">Pizza</a>
-      <a href="#">Sushi</a>
-      <a href="#">Salad</a>
-      <a href="#">Dessert</a>
-      <a href="#">Drinks</a>
+        <img src="dist/img/piza_2.png" class="header__foto">
+        <p class="absolute about__absolute absolute__text">When ordering from <br><span>700 UAH</span>, delivery is free
+        </p>
+        <img src="dist/img/icon-sum.svg" class="absolute about__absolute absolute__icon">
+        <img src="dist/img/Vector4.svg" class="absolute about__absolute absolute__vector">
+      </section>
     </div>
 
+  </header>
+
+  <main>
+    <div class="menu">
+      <h1>Popular dishes</h1>
+      <div class="group menu__group">
+        <a href="#">Pizza</a>
+        <a href="#">Sushi</a>
+        <a href="#">Salad</a>
+        <a href="#">Dessert</a>
+        <a href="#">Drinks</a>
+      </div>
+
+      <div class="page menu__page">
+        <div class="element page__element" z-index: -1>
+          <img src="dist/img/element1.png" class="foto element__foto">
+          <h3 class="title element__title">Quattro formaggi</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
 
 
+        </div>
 
-  </div>
+        <div class="element page__element">
+          <img src="dist/img/element2.png" class="foto element__foto">
+          <h3 class="title element__title">Карбонара</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 UAH</span>
+          <img src="dist/img/icon-basket-orange.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/element3.png" class="foto element__foto">
+          <h3 class="title element__title">Філадельфія селмон</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, mozzarella, barrel, eggs, Parmesan cheese</p>
+          <span class="price element__price">119 UAH</span>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+          <img src="dist/img/xit-icon.svg" class="absolute-icon element__absolute-icon">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/element4.png" class="foto element__foto">
+          <h3 class="title element__title">Ді маре</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 UAH</span>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/element5.png" class="foto element__foto">
+          <h3 class="title element__title">Кватро формаджіо</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 UAH</span>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/element6.png" class="foto element__foto">
+          <h3 class="title element__title">Кватро формаджіо</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 UAH</span>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/element7.png" class="foto element__foto">
+          <h3 class="title element__title">Кватро формаджіо</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 UAH</span>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/element8.png" class="foto element__foto">
+          <h3 class="title element__title">Кватро формаджіо</h3>
+          <span class="size element__size">32cm</span>
+          <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
+          <span class="price element__price">119 грн.</span>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+      </div>
+      <img src="dist/img/meat.svg" class="background-icon menu__background-icon1">
+      <img src="dist/img/onion.svg" class="background-icon menu__background-icon2">
+      <a href="#" class="more menu__more"><img src="dist/img/more.svg"></a>
+      <div class="more menu__more"></div>
 
-</main>
+    </div>
+
+  </main>
 </body>
+
 </html>
