--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <span class="size element__size">32cm</span>
           <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
           <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket-orange.svg" class="basket element__basket">
         </div>
         <div class="element page__element">
@@ -81,6 +82,7 @@
           <span class="size element__size">32cm</span>
           <p>Dough, mozzarella, barrel, eggs, Parmesan cheese</p>
           <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
           <img src="dist/img/xit-icon.svg" class="absolute-icon element__absolute-icon">
         </div>
@@ -90,6 +92,7 @@
           <span class="size element__size">32cm</span>
           <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
           <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
         </div>
         <div class="element page__element">
@@ -98,6 +101,7 @@
           <span class="size element__size">32cm</span>
           <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
           <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
         </div>
         <div class="element page__element">
@@ -106,6 +110,7 @@
           <span class="size element__size">32cm</span>
           <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
           <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
         </div>
         <div class="element page__element">
@@ -114,6 +119,7 @@
           <span class="size element__size">32cm</span>
           <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
           <span class="price element__price">119 UAH</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
         </div>
         <div class="element page__element">
@@ -122,17 +128,73 @@
           <span class="size element__size">32cm</span>
           <p>Dough, Mozzarella, Cheddar, Blue, Parmesan</p>
           <span class="price element__price">119 грн.</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
         </div>
       </div>
       <img src="dist/img/meat.svg" class="background-icon menu__background-icon1">
       <img src="dist/img/onion.svg" class="background-icon menu__background-icon2">
-      <a href="#" class="more menu__more"><img src="dist/img/more.svg"></a>
-      <div class="more menu__more"></div>
+      <div class="more menu__more">
+        <a href="#"><img src="dist/img/more.svg"></a>
+      </div>
+
 
     </div>
 
+
   </main>
+
+  <section class="gallery">
+    <img src="dist/img/cabbage.svg" class="background-icon3 gallery__background-icon3">
+    <div class="foto gallery__foto">
+      <img src="dist/img/section/foto1.jpg">
+      <img src="dist/img/section/foto2.jpg">
+      <img src="dist/img/section/foto3.jpg">
+      <img src="dist/img/section/foto4.jpg">
+      <img src="dist/img/section/foto5.jpg">
+      <img src="dist/img/section/foto6.jpg">
+    </div>
+    <div class="instagram gallery__instagram">
+      <a href="#">
+        <p>Instagram: <span>@classic_kovel</span></p>
+      </a>
+    </div>
+
+
+  </section>
+
+  <section class="form">
+    <div class="wrap form__wrap">
+      <h1>Fill out the form <br>and we will call you</h1>
+      <div class="input-group wrap__input-group">
+        <input type="text" placeholder="Your name">
+        <input type="text" placeholder="Phone number">
+        <button type="submit">
+          <span>Сall back</span>
+          <img src="dist/img/button-vector.svg">
+        </button>
+      </div>
+
+    </div>
+
+
+    <footer>
+      <nav></nav>
+    </footer>
+
+  </section>
+  
+  <footer class="footer">
+    <nav class="nav footer__nav">
+      <a href="#">© Classic Family Restaurant</a>
+      <a href="#"><img src="dist/img/logo.png"></a>
+      <a href="#">Made with delight by <span>harmuder</span></a>
+
+    </nav>
+    
+  </footer>
+
+
 </body>
 
 </html>
