:feat: add files .js

--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
       <div class="wrap form__wrap">
         <h1>Fill out the form <br>and we will call you</h1>
         <div class="input-group wrap__input-group">
-          <form action="#">
-            <input type="text" placeholder="Your name">
-            <input type="text" placeholder="Phone number">
+          <form action="#" class="basic-form">
+            <input type="text" name="userName" placeholder="Your name">
+            <input type="tel" name="userPhone" placeholder="Phone number">
             <button type="submit">
               <span>Сall back</span>
               <img src="dist/img/button-vector.svg">
@@ -194,6 +194,11 @@
       <a href="javascript:void(0)"><img src="dist/img/logo.png"></a>
       <a href="javascript:void(0)">Made with delight by <span>harmuder</span></a>
   </footer>
+
+  
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
