:feat: add section sushi

--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
           <span class="price element__price">119 UAH</span>
           <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
           <img src="dist/img/icon-basket.svg" class="basket element__basket">
-
-
         </div>
         <div class="element page__element">
           <img src="dist/img/element2.png" class="foto element__foto">
@@ -142,6 +140,83 @@
       <img src="dist/img/onion.svg" class="background-icon menu__background-icon2">
       <div class="more menu__more">
         <a href="javascript:void(0)"><img src="dist/img/more.svg"></a>
+      </div>
+
+      <div class="page menu__page">
+
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi1.png" class="foto element__foto">
+          <h3 class="title element__title">Philadelphia</h3>
+          <span class="size element__size">190gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">250 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket-orange.svg" class="basket element__basket">
+          <img src="dist/img/xit-icon.svg" class="absolute-icon element__absolute-icon">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi2.png" class="foto element__foto">
+          <h3 class="title element__title">Chef roll</h3>
+          <span class="size element__size">180gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">210 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi3.png" class="foto element__foto">
+          <h3 class="title element__title">Bali</h3>
+          <span class="size element__size">200gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">240 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi4.png" class="foto element__foto">
+          <h3 class="title element__title">Kioto</h3>
+          <span class="size element__size">240gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">150 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi5.png" class="foto element__foto">
+          <h3 class="title element__title">Philadelphia</h3>
+          <span class="size element__size">190gr</span>
+          <p>Salmon, cream cheese "Cremette", avocado</p>
+          <span class="price element__price">180 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi6.png" class="foto element__foto">
+          <h3 class="title element__title">Philadelphia</h3>
+          <span class="size element__size">180gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">250 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi7.png" class="foto element__foto">
+          <h3 class="title element__title">Philadelphia</h3>
+          <span class="size element__size">210gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">280 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
+        <div class="element page__element">
+          <img src="dist/img/sushi/sushi8.png" class="foto element__foto">
+          <h3 class="title element__title">Philadelphia</h3>
+          <span class="size element__size">230gr</span>
+          <p>Сream cheese "Cremette", salmon, cucumber</p>
+          <span class="price element__price">250 RUB</span>
+          <svg viewBox="0 0 10 10" widht="30" height="30" class="rect"></svg>
+          <img src="dist/img/icon-basket.svg" class="basket element__basket">
+        </div>
       </div>
 
 
