--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
         <h1>Fill out the form <br>and we will call you</h1>
         <div class="input-group wrap__input-group">
           <form action="#" class="basic-form">
-            <input type="text" name="userName" placeholder="Your name">
-            <input type="tel" name="userPhone" placeholder="Phone number">
+            <input type="text" name="userName" placeholder="Your name" required>
+            <input type="tel" name="userPhone" placeholder="+7 (___) ___-__-__" required>
             <button type="submit">
               <span>Сall back</span>
               <img src="dist/img/button-vector.svg">
@@ -270,10 +270,11 @@
       <a href="javascript:void(0)">Made with delight by <span>harmuder</span></a>
   </footer>
 
-  
-  <script src="js/jquery.validate.min.js"></script>
-  <script src="js/jquery.mask.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+  <script src="./js/jquery.validate.min.js"></script>
+  <script src="./js/jquery.mask.min.js"></script>
+
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
