--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
   </footer>
 
   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-  <script src="./js/jquery.validate.min.js"></script>
-  <script src="./js/jquery.mask.min.js"></script>
+  <script src="/dist/js/jquery.validate.min.js"></script>
+  <script src="/dist/js/jquery.mask.min.js"></script>
 
   <script src="./js/main.js"></script>
 </body>
