--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
   <script src="/dist/js/jquery.validate.min.js"></script>
   <script src="/dist/js/jquery.mask.min.js"></script>
-
-  <script src="./js/main.js"></script>
+  <script src="/dist/js/main.js"></script>
 </body>
 
 </html>
