--- a/index.html
+++ b/index.html
@@ -270,7 +270,10 @@
       <a href="javascript:void(0)">Made with delight by <span>harmuder</span></a>
   </footer>
 
-  <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+  <script
+          src="https://code.jquery.com/jquery-3.6.0.min.js"
+          integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+          crossorigin="anonymous"></script>
   <script src="/dist/js/jquery.validate.min.js"></script>
   <script src="/dist/js/jquery.mask.min.js"></script>
   <script src="/dist/js/main.js"></script>
