--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
       <a href="javascript:void(0)">Made with delight by <span>harmuder</span></a>
   </footer>
 
-  <script src="/dist/js/jquery.js"></script>
-  <script src="/dist/js/jquery.validate.min.js"></script>
-  <script src="/dist/js/jquery.mask.min.js"></script>
-  <script src="/dist/js/main.js"></script>
+  <script src="./dist/js/jquery.js"></script>
+  <script src="./dist/js/jquery.validate.min.js"></script>
+  <script src="./dist/js/jquery.mask.min.js"></script>
+  <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
