--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body style='overflow-x:hidden'>
   <header class="header">
     <div class="header__wrap">
       <nav class="nav header__nav">
