--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="javascript:void(0)" class="icon icon3 nav__icon nav__icon3">
                     <img src="dist/img/icon3.svg">
                 </a>
-                <a href="javascript:void(0)">Daily 11am - 9pm</a>
+                <a href="javascript:void(0)" class="time nav__time">Daily 11am - 9pm</a>
                 <a href="javascript:void(0)" class="icon nav__icon">
                     <img src="dist/img/icon.svg">
                 </a>
@@ -247,7 +247,7 @@
             <div class="wrap form__wrap">
                 <h1>Fill out the form <br>and we will call you</h1>
                 <div class="input-group wrap__input-group">
-                    <form action="#" class="basic-form">
+                    <form action="#" class="basic-form input-group__basic-form">
                         <input type="text" name="userName" placeholder="Your name" required>
                         <input type="tel" name="userPhone" placeholder="+7 (___) ___-__-__" required>
                         <button type="submit">
@@ -267,8 +267,8 @@
 
     <footer class="footer">
         <span>© Classic Family Restaurant</span>
-        <a href="javascript:void(0)"><img src="dist/img/logo.png"></a>
-        <a href="javascript:void(0)">Made with delight by <span>harmuder</span></a>
+        <a href="javascript:void(0)" class="logo-footer footer__logo-footer"><img src="dist/img/logo.png"></a>
+        <a href="javascript:void(0)" class="rights footer__rights">Made with delight by <span>harmuder</span></a>
     </footer>
 </div>
 
