--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 
         </div>
-        <section class="gallery">
+        <section class="gallery" style="overflow-x: hidden">
             <img src="dist/img/cabbage.svg" class="background-icon3 gallery__background-icon3">
             <div class="foto gallery__foto">
                 <img src="dist/img/section/foto1.jpg">
@@ -243,7 +243,7 @@
 
         </section>
 
-        <section class="form">
+        <section class="form" style="overflow-x: hidden">
             <div class="wrap form__wrap">
                 <h1>Fill out the form <br>and we will call you</h1>
                 <div class="input-group wrap__input-group">
