--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="overflow-x: hidden">
-<div class="container">
+<div class="container" style="overflow-x: hidden">
     <header class="header">
         <div class="header__wrap">
             <nav class="nav header__nav">
